# cadep

./: .env.example  .gitignore  CADEP_PRD_v2.0_addendum.md  cadep-session-summary.md  cadep.skill  phase0_evaluation_contract.md  phase0_proposals_and_answer_keys.md  phase0_results.md  phase0_revised_rubric.md  phase0_round2_results.md  phase0_round2_rubric.md  pyproject.toml  response-to-prd-review-round2.md  response-to-prd-review.md  severity_rubric.md
.claude/skills/cadep/: SKILL.md
.claude/skills/cadep/references/: severity_rubric.md
.claude/skills/cadep/references/vault/: concept_index.json  vault_scope.md
.claude/skills/cadep/references/vault/documents/: bai-silverstein-2010.md  bien-tibshirani-2011.md  black-litterman-1992.md  bollerslev-1986.md  demiguel-garlappi-uppal-2009.md  dissmann-brechmann-czado-kurowicka-2013.md  el-karoui-2008.md  engle-2002.md  fan-liao-mincheva-2013.md  genest-remillard-beaudoin-2009.md  glasserman-2003.md  (+10 more)
cadep/: audit_logger.py  cli.py  config.py  domain_classifier.py  drift_scanner.py  escalation_checker.py  friction_generator.py  input_normalizer.py  models.py  orchestrator.py  output_formatter.py  prompts.py  retrieval.py  specialist_compressor.py  token_logger.py
cadep/agents/: __init__.py  base.py  devils_advocate.py  specialist.py  synthesizer.py
vault/stats-hd-estimation/: concept_index.json  vault_scope.md
vault/stats-hd-estimation/documents/: bickel-levina-2008.md  chen-fan-2006.md  efron-tibshirani-1993.md  embrechts-2003.md  friedman-hastie-tibshirani-2008.md  joe-2014.md  ledoit-wolf-2004.md  nelsen-2006.md
